hw upload / stylesheet

--- a/IS657-HW2-old/app.json
+++ b/IS657-HW2-old/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "IS657-FlexPractice-06032022",
-    "slug": "IS657-FlexPractice-06032022",
+    "name": "IS657-HW2",
+    "slug": "IS657-HW2",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
