--- a/IS657-HW2-old/package.json
+++ b/IS657-HW2-old/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "is657-flexpractice-06032022",
+  "name": "is657-hw2",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
